
	* Fix bug when checking files and the first piece is invalid

* 2.0.6 released

	* fix issue creating a v2 torrent from torrent_info containing an empty file
	* make recheck files also update which files use partfile
	* add write_through disk_io_write_mode, which flushes pieces to disk immediately
	* improve copy file function to preserve sparse regions (when supported)
	* add function to truncate over-sized files part of a torrent
	* fix directory creation on windows shared folders
	* add flag to make add_files() not record file attributes
	* deprecate (unused) allow_partial_disk_writes settings
	* fix disk-full error reporting in mmap_disk_io
	* fixed similar-torrents feature for v2 torrents
	* fix potential unbounded recursion in add_completed_job, in disk I/O
	* deprecated (unused) volatile_read_cache setting
	* fix part files being marked as hidden on windows

* 2.0.5 released

	* on windows, explicitly flush memory mapped files periodically
	* fix build with WolfSSL
	* fix issue where incoming uTP connections were not accepted over SOCKS5
	* fix several issues in handling of checking files of v2 torrents, esp. from magnet links
	* make the token limit when parsing metadata from magnet files configurable
	* fix issue with stalled pieces on disk full errors
	* fix missing python binding for file_progress_flags
	* fix torrent_file_with_hashes() to fail when we don't have the piece layers
	* restore path character encoding conversion for non UTF-8 locales on linux
	* fix use-after-free bug in make_magnet_uri
	* add write_torrent_file() to produce a .torrent file from add_torrent_params
	* allow loading v2 .torrent files without piece layer
	* fix issue with adding v2 torrents with invalid file root hash

* 2.0.4 released

	* fix piece picker bug causing double-picks with prefer-contiguous enabled
	* expose session_params in python bindings
	* fix (deprecated) use of add_torrent_params::info_hash