@@ -1,4 +1,5 @@
 
+	* suppress tracker_error_alert for announce_skipped to reduce alert noise
 	* Fix bug when checking files and the first piece is invalid
 
 * 2.0.6 released
